# BeagleBoop-Game

./: .Makefile.swp  .main.c.swp  Buttons.c  Buttons.h  CMakeLists.txt  InputManager.c  InputManager.h  InputTest.c  Joystick.c  LED.h  Makefile  Potentiometer.c  Potentiometer.h  README.md  accelerometer  accelerometer.c  accelerometer.h  audioMixer.c  audioMixer.h  client_interface.c  client_interface.h  gameTest  game_core.c  game_core.h  main.c  seg_display.c  seg_display.h  test_accelerometer.c  textToSpeech.c
libs/: Accelerometer.c  CMakeLists.txt  LED.c  audioMixer.c  client_interface.c  textToSpeech.c
libs/curl-7.56.1/: Makefile  config.status  curl-config  libcurl.pc  libtool
libs/curl-7.56.1/docs/: Makefile
libs/curl-7.56.1/docs/cmdline-opts/: Makefile
libs/curl-7.56.1/docs/examples/: Makefile
libs/curl-7.56.1/docs/libcurl/: Makefile
libs/curl-7.56.1/include/: Makefile
libs/curl-7.56.1/include/curl/: Makefile
libs/curl-7.56.1/lib/: Makefile  curl_config.h
libs/curl-7.56.1/lib/.deps/: libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-dict.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-file.Plo  libcurl_la-formdata.Plo  libcurl_la-ftp.Plo  libcurl_la-ftplistparser.Plo  libcurl_la-getinfo.Plo  (+33 more)
libs/curl-7.56.1/scripts/: Makefile
libs/curl-7.56.1/src/: Makefile  curl
libs/curl-7.56.1/tests/: Makefile
tools/: CMakeLists.txt  main.c
(+33 files in other folders)
