cmake_minimum_required(VERSION 3.2)
set(CMAKE_C_COMPILER "arm-linux-gnueabihf-gcc")
#set(CMAKE_C_FLAGS_RELEASE "-Wall -g -std=c99 -D _POSIX_C_SOURCE=200809L -Werror")
set(CMAKE_C_FLAGS "-Wall -g -std=c99 -D _POSIX_C_SOURCE=200809L -Werror -pthread")
project(sorter)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "$ENV{HOME}/cmpt433/public/myApps")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
include_directories(${CMAKE_SOURCE_DIR}/include)
link_directories(${LIBRARY_OUTPUT_PATH})
add_subdirectory(libs)
add_subdirectory(tools)